--- a/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -35,7 +35,7 @@
 						<p:submenu label="Cadastros">
 							<p:menuitem value="Fabricante" outcome="/fabricante/CadastroFabricante"/>
 							<p:menuitem value="Modelo Carro" outcome="/modeloCarro/CadastroModeloCarro" />
-							<p:menuitem value="Acessório" />
+							<p:menuitem value="Acessório" outcome="/acessorio/CadastroAcessorio" />
 							<p:menuitem value="Carro" />
 							<p:separator/>
 							<p:menuitem value="Funcionário" />
