--- a/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
+++ b/Aulas/Criando projeto do curso/locadora-veiculo-web/src/main/webapp/WEB-INF/template/LayoutPadrao.xhtml
@@ -36,7 +36,7 @@
 							<p:menuitem value="Fabricante" outcome="/fabricante/CadastroFabricante"/>
 							<p:menuitem value="Modelo Carro" outcome="/modeloCarro/CadastroModeloCarro" />
 							<p:menuitem value="Acessório" outcome="/acessorio/CadastroAcessorio" />
-							<p:menuitem value="Carro" />
+							<p:menuitem value="Carro" outcome="/carro/CadastroCarro" />
 							<p:separator/>
 							<p:menuitem value="Funcionário" />
 							<p:menuitem value="Motorista" />
